--- a/front/index.html
+++ b/front/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Document</title>
   </head>
   <body>
-    <h1>Proyecto de M2</h1>
+    <header>
+      <nav class="nav">
+        <img src="/front/assets/logocine.png" alt="logo">
+      </nav>
+      <ul>
+        <li>
+          <a href="http://">Historia del Cine</a>
+        </li>
+        <li>
+          <a href="http://">Sobre mi</a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section class="container">
+        <h2>Peliculas</h2>
+        <div class="cards" id="movies-container"></div>
+      </section>
+    </main>
 
     <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
