--- a/front/index.html
+++ b/front/index.html
@@ -14,10 +14,10 @@
       </nav>
       <ul>
         <li>
-          <a href="http://">Historia del Cine</a>
+          <a href="./pages/historycinema/index.html">Historia del Cine</a>
         </li>
         <li>
-          <a href="http://">Sobre mi</a>
+          <a href="./pages/about/index.html">Sobre mi</a>
         </li>
       </ul>
     </header>
